port: restore GeckoLib 4 compatible AFW baseline for 1.21.1